--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -16,11 +16,11 @@
       </li>
       {{#if home}}
       <li class="nav-item">
-        <a class="btn btn-danger scrape-new">SCRAPE NEW ARTICLES!</a>
+        <a class="btn scrape-new">SCRAPE NEW ARTICLES!</a>
       </li>
       {{/if}}
       <li class="nav-item">
-        <a class="btn btn-danger clear">CLEAR ARTICLES!</a>
+        <a class="btn clear">CLEAR ARTICLES!</a>
       </li>
     </ul>
   </div>
