--- a/views/partials/footer.handlebars
+++ b/views/partials/footer.handlebars
@@ -1,5 +1,5 @@
 <footer class="footer">
   <div class="container">
-    <p>New York Times Mongo Scraper</p>
+    <p>New York Times</p>
   </div>
 </footer>
