--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -8,7 +8,7 @@
             <h3>
                 <a class="article-link" target="_blank" rel="noopener noreferrer"
                     href={{this.url}}>{{this.headline}}</a>
-                <a class="btn btn-success save">Save Article</a>
+                <a class="btn btn-primary save">Save Article</a>
             </h3>
         </div>
         <div class="card-body">{{this.summary}}</div>
