--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,5 +1,5 @@
 .footer {
-    position: fixed;
+    position: absolute;
     bottom: 0;
     width: 100%;
     color: white;
@@ -7,6 +7,19 @@
     text-align: center;
     vertical-align: center;
     padding: 10px;
+}
+
+.footer>.container>p {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    padding: 5px;
+    padding-bottom: 5px;
+    padding-left: 10px;
+    margin: 0;
+    font-weight: 800;
+    background: #0c7cd5;
 }
 
 .navbar {
