--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,5 +1,5 @@
 .footer {
-    position: absolute;
+    position: fixed;
     bottom: 0;
     width: 100%;
     color: white;
@@ -10,7 +10,7 @@
 }
 
 .footer>.container>p {
-    position: absolute;
+    position: fixed;
     right: 0;
     bottom: 0;
     left: 0;
